fix(Profile): Fixed disable state for visibility

--- a/src/components/screens/Account/__partials__/EditProfile/styles.less
+++ b/src/components/screens/Account/__partials__/EditProfile/styles.less
@@ -2,19 +2,26 @@
 
 .visibility {
   .ant-select-selector {
-    width: 160px !important;
+    width: 166px !important;
     height: 50px !important;
-    padding-Top: 15px !important;
+    padding-top: 15px !important;
     border: none !important;
+    border-color: transparent !important;
+    border-right-width: 0 !important;
     border-radius: 12px !important;
     background-color: @black_25 !important;
+    box-shadow: none !important;
     &:hover {
       background-color: @white_50 !important;
     }
+    .ant-select-selection-item {
+      display: flex;
+      margin-top: -2px;
+    }
   }
 }
-
 .ant-select-dropdown {
+  height: 50px !important;
   border: none !important;
   border-radius: 12px !important;
   background-color: @black_25 !important;
@@ -28,9 +35,27 @@
 .ant-select-item-option-active {
   background-color: transparent !important;
 }
+.ant-select-item-option-content {
+  display: flex;
+  margin-top: 4px;
+}
 
+.ant-tooltip {
+  padding-left: 30px !important;
+  padding-top: 50px !important;
+}
 .ant-tooltip-inner {
   width: 173px;
   padding: 12px 16px 26px 13px !important;
   border-radius: 4px !important;
+}
+.ant-tooltip-arrow {
+  width: 40px !important;
+  height: 40px !important;
+  top: 50% !important;
+  left: 3px !important;
+}
+.ant-tooltip-arrow-content {
+  width: 22px !important;
+  height: 22px !important;
 }
