--- a/src/components/screens/Account/__partials__/PersonalInfo/styles.less
+++ b/src/components/screens/Account/__partials__/PersonalInfo/styles.less
@@ -2,4 +2,7 @@
 
 .personal-info {
   padding: 44px 23px 82px 65px;
+  button {
+    width: 100%;
+  }
 }
